--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "axios": "^0.21.0",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.3.0-alpha1",
+    "cloudinary": "^1.33.0",
     "express": "^4.18.2",
     "jquery": "^3.1.1",
     "mongoose": "^6.8.4",
     "mysql2": "^3.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.7.1",
+    "react-social-icons": "^5.15.0"
   }
 }
